@@ -128,8 +128,8 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 5.1.1-alpha08
-@set doc-edition 5.1.1-alpha08
+@set nco-edition 5.1.1-alpha09
+@set doc-edition 5.1.1-alpha09
 @set copyright-years 1995--2022
 @set update-year 2022
 @set update-date 29 September 2022
